  second invocation thus avoiding the expense of recalculating the fitness
  score.  This is a useful optimisation in scenarios where some canidates
  survive from generation to generation unmodified (elitism is one example of
  this).

* Fixed ProbabilityParameterControl so that it allows the slider to move all
  the way to the maximum permitted value (ISSUE#10).


Changes in version 0.5.1
------------------------

* Simplified generics for EvolutionaryOperators.  It's now slightly less
  flexible but the most common scenarios are less cumbersome since there are
  no 'super' wildcards to deal with when constructing pipelines and no need to
  deal with sub-types when implementing your own operators.

* Added generic type parameters to ListCrossover, ListOrderCrossover and
  ListOrderMutation to be compatible with the above change.

* Added evolutionary art example appliction inspired by Roger Alsing's
  evolution of the Mona Lisa, see
  http://rogeralsing.com/2008/12/07/genetic-programming-evolution-of-mona-lisa/

* Added Replacement evolutionary operator that randomly replaces candidates
  with independent, newly-generated random candidates.  Useful for introducing
  new genetic material into stagnating populations.

* Improved ListCrossover operator so that it can work with parents of variable
  lengths.

* Added high-order evolutionary operator, ListOperator that converts an
  operator of a given type into a operator that works with lists of that type.

* Enhancements to the Evolution Monitor component.


Changes in version 0.5.0
------------------------

* Added wildcard to generic parameter of Console select method.

* Added check to ensure that there is always at least one termination condition
  specified.

* Improved reflection in RendererAdapter and InteractiveSelection.  Previously
  they tried to access classes that may not have been visible to them.

* Introduced tree-based genetic programming example application.
